new workshop page, style and content updates

--- a/src/app/about.hbs
+++ b/src/app/about.hbs
@@ -28,14 +28,7 @@
           </div>
         </div>
       </div>
-      {{!-- <div class="container bg-gray-light">
-        <div class="row pt-6 pb-6">
-          <div class="col d-flex align-items-center justify-content-center">
-            <img class="w-100" alt="Layout of buttons, cards, typography, colors for new design system" src="./assets/about-header.jpg">
-          </div>
-        </div>
-      </div> --}}
-      <div class="project__img-full-width" style="background-image: url('./assets/about-header.jpg');">
+      <div class="project__img-full-width" style="background-image: url('./assets/about-header.jpg');" loading="lazy">
       </div>
       <div class="container bg-white">
         <div class="row py-6 gx-md-lg gx-md">
@@ -79,7 +72,7 @@
               <p>When working with a designer, I bring in development to review their work before it is even presented to stakeholders. This ensures that the development feasibility and level of effort is considered before any decisions are made. It also allows the developers to learn the design intention and benefit to the user of the work they're asked to take on.</p>
               <h3 class="h5 font-weight-bold mt-content text-primary font-open-sans">1 on 1 Design QA</h3>
               <p>Before any development work is completed, it needs to have final review by the designer. When these reviews involve a designer and developer sitting together to discuss any feedback, it lets both sides understand what the issues are, and how to best address them.</p>
-              <h3 class="h5 font-weight-bold mt-content text-primary font-open-sans">ADA Sign Off</h3>
+              <h3 class="h5 font-weight-bold mt-content text-primary font-open-sans">ADA Partnership</h3>
               <p>I strongly believe that any experience that a user interacts with should be accessible to all users. Before any development work is seen by customers it should be reviewed by an ADA professional, and approved following <a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG standards</a>.</p>
             </div>
           </div>
@@ -109,7 +102,7 @@
             {{> partials/project-card-evolution}}
           </div>
           <div class="col-md-5 offset-md-2 offset-0 col-12">
-            {{> partials/project-card-cluster}}
+            {{> partials/project-card-migration}}
           </div>
         </div>
       </div>
