--- a/src/app/evolution.hbs
+++ b/src/app/evolution.hbs
@@ -21,7 +21,8 @@
             <h1 class="project__title text-primary mb-2">Evolution Design System</h1>
             <span class="h4 font-weight-light text-primary d-block mb-2">Prudential</span>
             <span class="text-lg font-weight-bold d-block mb-5">Sep. 2020 - Present</span>
-            <p class="text-lg">Building a new company-wide design system from the ground up. Leading the digital “evolution” of a 140 year old company to redefine its standing in the financial services industry.</p>
+            <p class="text-lg mb-4">Building a new company-wide design system from the ground up. Leading the digital “evolution” of a 140 year old company to redefine its standing in the financial services industry.</p>
+            <a class="btn-pill-lg d-inline-block" href="https://www.prudential.com" target="blank">View project</a>
           </div>
           <div class="col-lg-5 col-12">
             <div class="project__info-box">
@@ -58,7 +59,7 @@
       <div class="container bg-gray-light">
         <div class="row pt-6 pb-6">
           <div class="col d-flex align-items-center justify-content-center">
-            <img class="project__img" alt="Layout of buttons, cards, typography, colors for new design system" src="./assets/evolution-header-3.jpg">
+            <img class="project__img" alt="Layout of buttons, cards, typography, colors for new design system" src="./assets/evolution-header.jpg" loading="lazy">
           </div>
         </div>
       </div>
@@ -86,7 +87,7 @@
               <figure class="project__img-wrapper">
                 <picture>
                   <source srcset="./assets/evolution-old-home.jpg" media="(min-width: 992px)">
-                  <img class="project__img project__img-bordered" src="./assets/evolution-old-home-mobile.jpg" alt="Previous Prudential.com homepage">
+                  <img class="project__img project__img-bordered" src="./assets/evolution-old-home-mobile.jpg" alt="Previous Prudential.com homepage" loading="lazy">
                 </picture>
                 <figcaption class="text-sm">Previous Prudential.com homepage</figcaption>
               </figure>
@@ -99,6 +100,7 @@
               </ul>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Constraints</h3>
               <ul>
+                <li>Limited resources with only a team of 6 people including 3 designers and 3 developers</li>
                 <li>Limited creative freedom due to implementing previous mockups from an outside agency</li>
                 <li>Required to support over 10 development teams across multiple front-end frameworks</li>
               </ul>
@@ -122,7 +124,7 @@
               <figure class="project__img-wrapper">
                 <picture>
                   <source srcset="./assets/evolution-atomic.jpg" media="(min-width: 992px)">
-                  <img class="project__img" src="./assets/evolution-atomic-mobile.jpg" alt="Atomic design diagram for Evolution Design System">
+                  <img class="project__img" src="./assets/evolution-atomic-mobile.jpg" alt="Atomic design diagram for Evolution Design System" loading="lazy">
                 </picture>
               </figure>
               <h4 class="h5 font-weight-bold mt-content font-open-sans">Contribution Process</h4>
@@ -130,7 +132,7 @@
               <p>I facilitated conversations with the design and ADA teams, and the development process was ready to be implemented before any development work began.</p>
               <figure class="project__img-wrapper">
                 <picture>
-                  <img class="project__img" src="./assets/evolution-process.jpg" alt="Contribution to design system diagram showing design and ada review required">
+                  <img class="project__img" src="./assets/evolution-process.jpg" alt="Contribution to design system diagram showing design and ada review required" loading="lazy">
                 </picture>
                 <figcaption class="text-sm">Design to development workflow to add a new component to the design system.</figcaption>
               </figure>
@@ -154,18 +156,20 @@
               <figure class="project__img-wrapper">
                 <picture>
                   <source srcset="./assets/evolution-wc.jpg" media="(min-width: 992px)">
-                  <img class="project__img" src="./assets/evolution-wc-mobile.jpg" alt="Contribution to design system diagram showing design and ada review required">
+                  <img class="project__img" src="./assets/evolution-wc-mobile.jpg" alt="Contribution to design system diagram showing design and ada review required" loading="lazy">
                 </picture>
               </figure>
               <h4 class="h5 font-weight-bold mt-content font-open-sans">Documentation</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+              <p>Finally, we created an extensive documentation ecosystem that ensures all users of the design system, from designs to developers to product owners, can understand its purpose, and how to properly use it. <span class="highlight-pru">Our documentation included an XD component library, Zero Height design guidelines, and Storybook development documentation.</span></p>
+              <p>For the storybook documentation, I created a system for documenting our components that reduced the amount of time developers would need to reach out to us directly with questions.</p>
+              <p>By listening to their feedback on the initial documentation, and observing what questions were commonly coming to us, I helped our small team of 6 save time. This will be even more important as the usage of the design system grows from 20 teams currently to company wide next year.</p>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Adoption</h3>
               <h4 class="h5 font-weight-bold font-open-sans">Initial Launch</h4>
               <p>The first project to launch using the new design system was the Prudential.com homepage. It was a great test of the system's cohesion, as the entire page was built using only the new system. Overall, the page was a success as it greatly improved the ease of doing business (EODB) scores and is what led to the design system gaining future adoption across other projects.</p>
               <figure class="project__img-wrapper">
                 <picture>
                   <source srcset="./assets/evolution-new-home.jpg" media="(min-width: 992px)">
-                  <img class="project__img project__img-bordered" src="./assets/evolution-new-home-mobile.jpg" alt="New Prudential.com homepage">
+                  <img class="project__img project__img-bordered" src="./assets/evolution-new-home-mobile.jpg" alt="New Prudential.com homepage" loading="lazy">
                 </picture>
                 <figcaption class="text-sm">New Prudential.com homepage. The first project under the new design system.</figcaption>
               </figure>
@@ -174,28 +178,35 @@
               <p>Once the system launched, we went around to teams and showed them how it worked. I would talk with designers and developers and focus on showing the ease of use and the flexibility. In one such talk, we presented the system at our first internal design conference.</p>
               <figure class="project__img-wrapper">
                 <picture>
-                  <img class="project__img" src="./assets/evolution-conference.jpg" alt="Conference intro slide with title Playbook Evolution launch and 4 speakers">
+                  <img class="project__img" src="./assets/evolution-conference.jpg" alt="Conference intro slide with title Playbook Evolution launch and 4 speakers" loading="lazy">
                 </picture>
               </figure>
               <h4 class="h5 font-weight-bold mt-content font-open-sans">Workshops</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <h4 class="h5 font-weight-bold mt-content font-open-sans">Collective Ownership</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>To help increase adoption we started leading various workshops and office hours to assist designers and developers to learn the new system and its benefits. These talks and offline 1 on 1 assistance <span class="highlight-pru">helped teams see the benefits of adoption, and have faith that our team would be something they could rely on</span>.</p>
+              <p>We also tried to brand our team as company leaders in the whole design development workflow. <span class="pru-highlight">I led several workshops on how to improve design and developer communication.</span> Using the design system as a tool, I highlighted where the common pitfalls are in that communication and how they can be avoided.</p>
             </div>
             <div class="project__section">
               <h2 class="project__anchor text-primary" id="key-deliverables">Key Deliverables</h2>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">CSS Style Library</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <ul>
+                <li>A Sass/CSS style library to establish foundational design system styles related to typography, color, grid structure, animation, etc.</li>
+                <li>A Sass tokenization structure that ensured consistency while increasing flexibility in each component</li>
+              </ul>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Web Component Library</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <ul>
+                <li>Over 100 UI components from buttons to forms to navigation</li>
+                <li>100% ADA compliance for each component</li>
+                <li>Complete style encapsulation using shadowDOM</li>
+              </ul>
             </div>
             <div class="project__section">
               <h2 class="project__anchor text-primary" id="takeaways">Takeaways</h2>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Outcomes</h3>
               <ul>
-                <li>Created the first global design system at Prudential of over 80 components to date</li>
+                <li>Created the first global design system at Prudential of over 100 components to date</li>
+                <li>Obtained 100% ADA compliance on every style and component</li>
                 <li>Increased efficiency for both designers and developers</li>
-                <li>Used by over 200 designers and developers</li>
+                <li>Have over 200 designers and developers currently using the design system</li>
               </ul>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Learnings</h3>
               <h4 class="h5 font-weight-bold mt-content font-open-sans">Importance of Support and Adoption</h4>
@@ -225,10 +236,10 @@
         </div>
         <div class="row pb-6">
           <div class="col-md-5 col-12 pb-6 pb-md-0">
-            {{> partials/project-card-dev}}
+            {{> partials/project-card-migration}}
           </div>
           <div class="col-md-5 offset-md-2 offset-0 col-12">
-            {{> partials/project-card-cluster}}
+            {{> partials/project-card-workshop}}
           </div>
         </div>
       </div>
