--- a/src/app/partials/navigation-home.hbs
+++ b/src/app/partials/navigation-home.hbs
@@ -1,6 +1,6 @@
 <div class="hyun-nav hyun-nav__absolute hyun-nav__animated d-flex flex-row align-items-center bg-primary">
   <div class="nav-left mr-auto">
-    <a class="nav-link-icon d-flex" href="./index.html">
+    <a class="nav-link-icon d-flex" href="./">
       <svg class="icon-stroke-white icon-size-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160 260">
         <path d="M.05 9.5s149.54.08 150.19 120C150.89 249.89.05 250.7.05 250.7" style="fill:none;stroke-miterlimit:10;stroke-width:19px"/>
         <path d="M160.06 10S10.51 10.13 9.87 130c-.65 120.39 150.19 121.2 150.19 121.2" style="fill:none;stroke-miterlimit:10;stroke-width:19px"/>
@@ -11,7 +11,7 @@
     </a>
   </div>
   <div class="nav-right d-flex flex-row align-items-center">
-    <a class="nav-link" href="./about.html">About</a>
+    <a class="nav-link" href="./about">About</a>
     <a class="nav-link" href="./assets/Hyun_Dylan_resume.pdf" target="_blank">Resume<span class="sr-only">opens in a new window</span></a>
     <a class="nav-link" href="#contact">Contact</a>
   </div>
