--- a/src/app/partials/project-card-evolution.hbs
+++ b/src/app/partials/project-card-evolution.hbs
@@ -5,7 +5,7 @@
   <div class="project-card__content">
     <h3 class="h4 mb-0">Evolution Design System</h3>
     <h4 class="h5 font-weight-light mb-4">Prudential</h4>
-    <a class="project-card__link mt-auto" href="./evolution.html"><span class="link-text">Explore Project</span></a>
+    <a class="project-card__link mt-auto" alt="" href="./evolution" loading="lazy"><span class="link-text">Explore project</span></a>
   </div>
 </div>
-<script src="../../scripts/project-card-evolution.js"></script>
+<script src="./project-card-evolution.js"></script>
