--- a/src/styles/hyun-style/_hyun-variables.scss
+++ b/src/styles/hyun-style/_hyun-variables.scss
@@ -8,13 +8,14 @@ $variable-prefix: hyun-;
 $hyun-red: #d9064e;
 $pru-primary: #06c;
 $fw-primary: #b9952a;
-$cluster-primary: #e38029;
 $birds-primary: #009444;
-$help-primary: #717171;
+$migration-primary: #001f45;
+$workshop-primary: #654993;
 
 // Secondary
 $hyun-white: #fff;
 $pru-secondary: #ffd200;
+$migration-secondary: #06c;
 
 // Text
 $hyun-text: #1e1c1a;
