--- a/src/styles/hyun-style/components/_c-buttons.scss
+++ b/src/styles/hyun-style/components/_c-buttons.scss
@@ -1,7 +1,52 @@
 @use "../../foundation/variables" as *;
 @use "../hyun-variables" as *;
 
-.btn-pill {
+.btn-pill,
+.btn-pill-lg {
+  color: $hyun-white;
+  background-color: var(--theme-primary);
+  border: 2px solid transparent;
+  border-radius: $hyun-border-radius-sm;
+  font-size: $font-size-sm;
+  text-decoration: none;
+  padding: .4rem $spacer-1;
+  transition: $animation-duration-1 $animation-easing-ease-in-out;
+
+  svg {
+    fill: $hyun-white;
+    stroke: $hyun-white;
+    transition: $animation-duration-1 $animation-easing-ease-in-out;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--theme-primary);
+    background-color: $hyun-white;
+    border: 2px solid var(--theme-primary);
+
+    svg {
+      fill: var(--theme-primary);
+      stroke: var(--theme-primary);
+    }
+  }
+}
+
+.btn-pill-lg {
+  font-size: $font-size-base;
+  padding: $spacer-1 $spacer-2;
+}
+
+.btn-sm-full-width {
+  width: 100%;
+}
+
+@media screen and (min-width: map-get($grid-breakpoints, sm)) {
+  .btn-sm-full-width {
+    width: initial;
+  }
+}
+
+.btn-footer {
   color: var(--theme-primary);
   background-color: $hyun-white;
   border: 2px solid var(--theme-primary);
@@ -26,15 +71,5 @@
       fill: $hyun-white;
       stroke: $hyun-white;
     }
-  }
-}
-
-.btn-sm-full-width {
-  width: 100%;
-}
-
-@media screen and (min-width: map-get($grid-breakpoints, sm)) {
-  .btn-sm-full-width {
-    width: initial;
   }
 }
