mobile font issue and home page height issue fix

--- a/src/app/evolution.hbs
+++ b/src/app/evolution.hbs
@@ -178,7 +178,7 @@
               <p>Once the system launched, we went around to teams and showed them how it worked. I would talk with designers and developers and focus on showing the ease of use and the flexibility. In one such talk, we presented the system at our first internal design conference.</p>
               <figure class="project__img-wrapper">
                 <picture>
-                  <img class="project__img" src="./assets/evolution-conference.jpg" alt="Conference intro slide with title Playbook Evolution launch and 4 speakers" loading="lazy">
+                  <img class="project__img project__img-bordered" src="./assets/evolution-conference.jpg" alt="Conference intro slide with title Playbook Evolution launch and 4 speakers" loading="lazy">
                 </picture>
               </figure>
               <h4 class="h5 font-weight-bold mt-content font-open-sans">Workshops</h4>
