--- a/src/app/index.hbs
+++ b/src/app/index.hbs
@@ -14,7 +14,7 @@
 
   <body>
     <div class="page-wrapper">
-      <div class="vh-100 bg-primary section-hero">
+      <div class="section-hero">
         {{> partials/navigation-home}}
         <div class="hero pt-3 pt-sm-0 px-2">
           <div class="hero-icons">
