--- a/src/app/migration.hbs
+++ b/src/app/migration.hbs
@@ -149,7 +149,7 @@
               <h2 class="project__anchor text-primary" id="learnings">Learnings</h2>
               <ul>
                 <li><p><span class="highlight-migration">Working with a 3rd party consultant requires constant communication and alignment.</span> You have to be equals, you can’t act like they’re doing a service for you, and they can’t act like they are the subject matter experts over you.</p></li>
-                <li><p>With massive long term projects, <span class="highlight-migration">allocating additional time for backgorund reseach saves time in execution</span>. Understanding all of the requirements, old tech and design pitfalls, past knowledge, and establishing a working relationship are critical before the project start. Cutting down on this in the beginning will just lead to miscommunications, pitfalls, and extended timelines in the end.</p></li>
+                <li><p>With massive long term projects, <span class="highlight-migration">allocating additional time for background reseach saves time in execution</span>. Understanding all of the requirements, old tech and design pitfalls, past knowledge, and establishing a working relationship are critical before the project start. Cutting down on this in the beginning will just lead to miscommunications, pitfalls, and extended timelines in the end.</p></li>
                 <li><p><span class="highlight-migration">No migration of this scale is going to be perfect.</span> It’s about knowing where you can put your effort to get the most value, and thoroughly documenting those places to improve post migration.</p></li>
               </ul>
             </div>
