--- a/src/styles/hyun-style/components/_c-hero.scss
+++ b/src/styles/hyun-style/components/_c-hero.scss
@@ -2,6 +2,9 @@
 @use "../hyun-variables" as *;
 
 .section-hero {
+  height: 100svh;
+  background-color: var(--theme-primary);
+
   .hero {
     position: absolute;
     top: 50%;
