optimizing images, small font updates

--- a/src/app/about.hbs
+++ b/src/app/about.hbs
@@ -24,7 +24,7 @@
             <p class="text-lg">Currently I'm enjoying living in the NYC area as a UI designer / developer at Prudential. When I'm not “making buttons look pretty” as I tell my friends, you can find me roaming around anywhere with my camera, or wishing I was back in the mountains in my home state of Colorado.</p>
           </div>
           <div class="col-lg-5 col-12">
-            <img class="border border-primary border-width-sm br-md w-100" src="./assets/profile.jpg" alt="">
+            <img class="border border-primary border-width-sm br-md w-100" src="./assets/profile-lg.jpg" alt="The once decent picture Dylan has of himself">
           </div>
         </div>
       </div>
