--- a/src/app/migration.hbs
+++ b/src/app/migration.hbs
@@ -76,8 +76,8 @@
           <div class="col-md-8 col-12">
             <div class="project__section">
               <h2 class="project__anchor text-primary" id="background">Background</h2>
-              <p>After the initial migration of the Prudential.com homepage to a new Evolution Design System, that still left over 800 pages that were in need of a redesign to align with the new design system.</p>
-              <p>At the same time the CMS these pages were built on was being deprecated. Deloitte was brought in as a partner to move the pages to a new Adobe Experience Manager (AEM) CMS.</p>
+              <p class="text-lg">After the initial migration of the Prudential.com homepage to a new Evolution Design System, that still left over 800 pages that were in need of a redesign to align with the new design system.</p>
+              <p class="text-lg">At the same time the CMS these pages were built on was being deprecated. Deloitte was brought in as a partner to move the pages to a new Adobe Experience Manager (AEM) CMS.</p>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Problem</h3>
               <p class="text-xl">800+ pages using an outdated CMS, dated and inconsistent designs, and not aligned with the new Evolution Design System.</p>
               <h3 class="h4 font-weight-bold mt-content text-primary font-open-sans">Goal</h3>
@@ -147,7 +147,7 @@
             </div>
             <div class="project__section">
               <h2 class="project__anchor text-primary" id="learnings">Learnings</h2>
-              <ul>
+              <ul class="text-lg">
                 <li><p><span class="highlight-migration">Working with a 3rd party consultant requires constant communication and alignment.</span> You have to be equals, you can’t act like they’re doing a service for you, and they can’t act like they are the subject matter experts over you.</p></li>
                 <li><p>With massive long term projects, <span class="highlight-migration">allocating additional time for background reseach saves time in execution</span>. Understanding all of the requirements, old tech and design pitfalls, past knowledge, and establishing a working relationship are critical before the project start. Cutting down on this in the beginning will just lead to miscommunications, pitfalls, and extended timelines in the end.</p></li>
                 <li><p><span class="highlight-migration">No migration of this scale is going to be perfect.</span> It’s about knowing where you can put your effort to get the most value, and thoroughly documenting those places to improve post migration.</p></li>
