--- a/src/styles/hyun-style/components/_c-project-card.scss
+++ b/src/styles/hyun-style/components/_c-project-card.scss
@@ -38,7 +38,7 @@
     $hover-distance: 1rem;
 
     color: var(--theme-secondary);
-    font-size: $font-size-lg;
+    font-size: $font-size-xl;
     font-weight: 400;
     text-decoration: none;
     position: relative;
